@@ -13,6 +13,7 @@ import com.example.MayaFisioLumiere.repository.WorkoutSessionRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -29,13 +30,18 @@ public class ExerciseSessionService {
     private  WorkoutSessionRepository workoutSessionRepository;
 
     public List<ExerciseSessionResponseDTO> getAllExerciseSessions() {
-        List<ExerciseSessionEntity> sessions = this.exerciseSessionRepository.findAll();
+        List<ExerciseSessionEntity> sessions = exerciseSessionRepository.findAll();
 
-        return sessions.stream()
-                .map(entity -> new ExerciseSessionResponseDTO(
-                        Math.toIntExact(entity.getExercisesession_id())
-                ))
-                .collect(Collectors.toList());
+        return sessions.stream().map(entity -> new ExerciseSessionResponseDTO(
+                Math.toIntExact(entity.getExercisesession_id()),
+                entity.getExercise().getExercise_ID(),
+                entity.getWorkoutSession().getWorkoutSession_id(),
+                entity.getPatient().getPatient_ID(),
+                entity.getSerie(),
+                entity.getRepetitions(),
+                entity.getFeelPain()
+                )
+        ).toList();
     }
 
 
@@ -58,6 +64,7 @@ public class ExerciseSessionService {
         newexerciseSession.setWorkoutSession(workoutSession);
         newexerciseSession.setSerie(data.serie());
         newexerciseSession.setRepetitions(data.repetitions());
+        newexerciseSession.setFeelPain(data.feelPain());
 
         return exerciseSessionRepository.save(newexerciseSession);
     }
@@ -85,6 +92,19 @@ public class ExerciseSessionService {
         }
         return exerciseSessionRepository.save(session);
     }
+
+    //Atualizar o feelPain da exerciseSession na visão do Patient quando ele terminar o exercício
+
+    public ExerciseSessionEntity updateExerciseSessionPain(Long exercisesession_id, ExerciseSessionRequestDTO data) {
+        ExerciseSessionEntity session = exerciseSessionRepository.findById(exercisesession_id)
+                .orElseThrow(() -> new RuntimeException("Sessão de exercício não encontrada"));
+
+            if (data.feelPain() != null) {
+                session.setFeelPain(data.feelPain());
+            }
+        return exerciseSessionRepository.save(session);
+    }
+
 
     public void deleteExerciseSession(Long exercisession_id) {
          try {
